# Smart-Cart

./: framerate.py  pyproject.toml  webcam.py
db/: inventory.db
gui/: CustomerInfo.py  GUICart.py  History.py  Inventory.py  SetupPayment.py  SignUp.py  test.py
src/: database.py  drawboundingbox.py  framerate.py  interpreter.py  webcam.py
src/AutoCart/: audio.py  camera.py  tracker.py  utilities.py  videostream.py  webcam.py
tests/: yolov8_webcam.py
