[tool.poetry]
name = "smart-cart"
version = "0.1.0"
description = "A smart cart system"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
opencv-python = "^4.8.1.78"
pyqt6 = "^6.6.0"
ultralytics = "^8.0.207"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
